# yatima

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
.github/workflows/: build-and-test.yml
articles/: architecture.md  auditable-research.md  browser-viewer.md  capabilities.md  cli.md  embedding.md  models.md  reasoning-models.md  relevant-research.md  tui.md
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
host/: Cargo.toml
host/src/: knobs.rs  lib.rs  logging.rs
host/tests/: actor_smoke.rs
lib/: Cargo.toml
lib/examples/: embed.rs  insider_watchlist.rs  invariant_reviewer.rs  investment_thesis.rs  metal_attn_replica_probe.rs  metal_depth_probe.rs  metal_rope_probe.rs  metal_trig_probe.rs  prefill_compare.rs  sec_metrics.rs
lib/src/: agent.rs  cancel.rs  capability.rs  chat.rs  completer.rs  engine.rs  expr.rs  lib.rs  reasoning.rs  runtime.rs  template.rs  token_output_stream.rs  tool.rs  transcript.rs
lib/src/host/: format.rs  mod.rs  profile.rs  source.rs
lib/tests/: coherence.rs  prefill_dtype_repro.rs  sampling_ab.rs
notes/: candle-metal-kv-issue.md  design.md  glm4-prefill-reproducer.md  metal-kv-cliff.md  vision.md
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: check-wasm.sh
serve/: Cargo.toml
serve/src/: lib.rs  main.rs
text/: Cargo.toml
text/src/: lib.rs
tui/: Cargo.toml
tui/src/: app.rs  engine_actor.rs  lib.rs  main.rs  render.rs
tui/tests/: actor_smoke.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: lib.rs  main.rs
