[package]
name = "yatima-cli"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[[bin]]
name = "yatima"
path = "src/main.rs"

[dependencies]
yatima-lib = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1"

[features]
default = ["fetch"]
fetch = ["yatima-lib/fetch"]
metal = ["yatima-lib/metal"]
