[package]
name = "yatima-gui"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[[bin]]
name = "yatima-gui"
path = "src/main.rs"

[features]
metal = ["yatima-lib/metal"]
fetch = ["yatima-lib/fetch"]

[dependencies]
yatima-lib = { path = "../lib" }
# Shared model-text prettification (LaTeX → Unicode); pure std, WASM-clean.
yatima-text = { path = "../text" }
# File logging behind $YATIMA_LOG (OBS-1: the lib emits tracing, the host
# installs the subscriber). Logs go to ~/.cache/yatima/gui.log.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
# Immediate-mode GUI on wgpu (Metal on macOS). egui 0.35 shapes text via
# harfrust + skrifa (kerning, ligatures, combining marks); bidi/RTL is the one
# known gap. Slice 0 is a "hello, engine" window — the GPU frontend's first
# pixels, reusing yatima-lib only (the engine-actor lives in yatima-tui for now;
# this spike runs its own small background runner thread).
eframe = { version = "0.35", default-features = false, features = [
  "wgpu",
  "default_fonts",
  # Window-system backends for Linux (CI builds the workspace on ubuntu;
  # winit emits a hard compile_error there without one). Both are
  # target-gated inside winit, so they cost nothing on macOS.
  "x11",
  "wayland",
] }
# Decode artifact images (matplotlib PNGs) to upload as egui textures. PNG only
# for the spike — keep the dep light.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
egui_commonmark = { version = "0.24", default-features = false, features = ["pulldown_cmark"] }
# SVG rasterization for read_image artifacts (usvg parse + tiny-skia
# raster; text/system-fonts so labeled diagrams render). Pure Rust —
# serves unchanged in the WASM client.
resvg = { version = "0.47", default-features = false, features = ["text", "system-fonts"] }
