[package]
name = "yatima-lib"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# candle pinned to the 0.11.0 release tag — newer architectures (qwen3,
# qwen3-moe, gemma3, deepseek2) and staying on the frontier. NB: 0.11 still has
# no i-quant GGUF support (dtypes 0-15 + BF16 only), so GGUFs using IQ* tensors
# do not load — see memory yatima-candle-gguf-dtype-support. Re-validate the
# Metal prefill behavior on each bump (notes/glm4-prefill-reproducer.md).
[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", tag = "0.11.0" }
candle-nn = { git = "https://github.com/huggingface/candle", tag = "0.11.0" }
candle-transformers = { git = "https://github.com/huggingface/candle", tag = "0.11.0" }
tokenizers = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
# Readability extraction for the `read_page` tool (main-article text from HTML).
dom_smoothie = "0.18"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-util = "0.7"
tracing = "0.1"

# Auto-fetch (the `fetch` feature) embeds possum's downloader as a library,
# pinned to the rev where its model commands moved into possum-lib.
possum-lib = { git = "https://github.com/shayne-fletcher/possum", rev = "52a9cd7390701f93437debe67c7b82ea80edff88", optional = true }

[features]
metal = [
  "candle-core/metal",
  "candle-nn/metal",
  "candle-transformers/metal",
]
fetch = ["dep:possum-lib"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
wiremock = "0.6"
