[package]
name = "yatima-tui"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
name = "yatima_tui"
path = "src/lib.rs"

[[bin]]
name = "yatima-tui"
path = "src/main.rs"

[features]
metal = ["yatima-lib/metal"]
fetch = ["yatima-lib/fetch"]

[dependencies]
yatima-lib = { path = "../lib" }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
