[package]
name = "yatima-tui"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
name = "yatima_tui"
path = "src/lib.rs"

[[bin]]
name = "yatima-tui"
path = "src/main.rs"

[features]
metal = ["yatima-lib/metal"]
fetch = ["yatima-lib/fetch"]

[dependencies]
yatima-lib = { path = "../lib" }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
# `unstable-rendered-line-info` exposes `Paragraph::line_count`, needed to
# auto-follow streaming text: the scroll offset must be in *wrapped* rows, not
# logical lines, or new output streams off-screen below the fold.
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# File logging behind $YATIMA_LOG (OBS-1: the lib emits tracing, the host
# installs the subscriber). The terminal belongs to ratatui, so logs go to
# ~/.cache/yatima/tui.log, never stderr.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Markdown → ratatui Text. default-features off drops the syntect code-highlight
# stack (heavy); we render structure (headings, bold, lists, rules), not syntax.
tui-markdown = { version = "0.3.8", default-features = false }
# The input box: a readline/emacs-keymapped text editor widget (Ctrl+A/E/K/U/W,
# Alt+B/F/D word motion, insert-at-point, undo). `-2` is the maintained fork on
# ratatui 0.30 / crossterm 0.29; default features give the crossterm `Input`
# conversion we feed key events through.
tui-textarea = { package = "tui-textarea-2", version = "0.11" }
# Syntax highlighting for fenced code blocks. `default-fancy` selects the
# pure-Rust regex engine (no C oniguruma). We map its colors onto the 256-color
# cube ourselves, so highlighting renders even on terminals without truecolor.
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
