[package]
name = "yatima-web"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# Rung 2's viewer: an eframe app compiled to wasm32 via trunk, served from
# yatima-serve's static route, speaking the wire over one WebSocket. The
# dependency line IS the design: the wasm-clean set only (WASM-1) —
# yatima-protocol for the wire, yatima-text for commit-time polish — never
# yatima-lib or yatima-host (that separation is the entire point of the
# protocol crate), and no tokio (ewebsock drives the socket on both wasm
# and native). The model half (src/lib.rs) is plain Rust so its tests run
# natively; the egui app compiles only for wasm32.

# Deliberately its own workspace: the repo root's native
# `cargo test --workspace` must never build wasm-targeted code.
[workspace]

[dependencies]
yatima-protocol = { path = "../protocol" }
# Commit-time polish, shared with the GUI: LaTeX → readable text, plus the
# plain-text image-link strip. Dependency-free, wasm-clean (WASM-1).
yatima-text = { path = "../text" }
# Decode image artifacts (PNG/JPEG only, per the spike's cuts); wasm-clean.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde_json = "1"

# The app layer exists only in the browser build; the native side of this
# crate is the transcript model and its tests.
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.35", default-features = false, features = [
  "default_fonts",
  "glow",
] }
ewebsock = "0.8"
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "HtmlCanvasElement",
  "Location",
  "Window",
] }
